2006-02-27  Laurent Sansonetti  <lrz@gnome.org>

    * AUTHORS,
      lib/alexandria.rb:

    Added Aymeric.

	* README:

	- Mention that Ruby/ZOOM is optional ;
	- Mention that Revolution is optional.

	* lib/alexandria/ui/completion_models.rb:

	Use the Evolution contacts database to furnish borrowers 
	auto-completion, via the Revolution library. If this library is
	not present on the system this feature is disabled.

	* lib/alexandria/ui.rb,
	  lib/alexandria/ui/main_app.rb:

	Check at runtime if Ruby/Pango has ellipzise support, and use it
	accordingly.

2006-01-05  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Smart libraries feature is complete.

	* lib/alexandria/smart_library.rb:

	When running for the first time (e.g. the ~/alexandria/.smart_libraries
	directory does not exist) provide some default smart libraries (all
	favorite and loaned books).

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/main_app.rb:

	Separate regular libraries from smart ones in the sidepane using a 
	separator.

2006-01-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/export_library.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/smart_library.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:
	  lib/alexandria/ui/import_dialog.rb:

	- Make sure smart libraries are exportable ;
	- Provide a default title for the Add Book Manually / Book Properties
	  dialogs when the target book title is empty ;
	- Added a keyboard shortcut for the Import button of the Import dialog ;
	- Make sure the latest regular library is not deletable ;
	- Misc fixes.

	* data/alexandria/glade/book_properties_dialog.glade,
	  lib/alexandria/ui/book_properties_dialog_base.rb:

	Removed the clear cover button in the books properties dialog and added
	a button to the cover file chooser dialog instead that does the same
	thing.

	* lib/alexandria/ui/main_app.rb:
